css/main.css
/* ... */
/* Settings Menu */

.settings-button {
	position: absolute;
	top: -48px;
	right: 0;
	width: 32px;
	height: 32px;
	cursor: pointer;
	border: 0;
	transition: transform 0.1s ease-in-out, background 0.8s var(--curve);
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

html[data-theme='dark'] .settings-button {
	background: url('../assets/settings-dark.svg') no-repeat top left;
}

html[data-theme='light'] .settings-button {
	background: url('../assets/settings-light.svg') no-repeat top left;
}

.settings-button:active, .settings-button:focus {
	transform: scale(0.86);
}

.settings-menu {
	position: absolute;
	width: 86px;
	text-align: center;
	/* -webkit-backdrop-filter: blur(20px) brightness(1.4);  
	backdrop-filter: blur(20px) brightness(1.4);   */
	padding: 12px;
	z-index: 10000;
	border-radius: 4px;
	touch-action: manipulation;
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	right: 0;
	top: -8px;
	/* transition: background-color 0.8s var(--curve), box-shadow 0.8s var(--curve); */
}

/* Because backdrop-filter doesn't work with variables */
html[data-theme='dark'] .settings-menu {
	-webkit-backdrop-filter: blur(16px);
	backdrop-filter: blur(16px);
	background-color: rgba(46, 48, 51, 0.4);
	box-shadow: 0 8px 14px -3px rgba(0, 0, 0, 0.4), inset 0 0 0 1px rgba(151, 151, 151, 0.08);
}

html[data-theme='light'] .settings-menu {
	-webkit-backdrop-filter: blur(16px);
	backdrop-filter: blur(16px);
	background-color: rgba(255, 255, 255, 0.6);
	box-shadow: 0 12px 16px -4px rgba(0, 0, 0, 0.20), inset 0 0 0 1px rgba(255, 255, 255, 0.16);
}

/* Add some margin but not for the last one */
.settings-menu .theme-setting:not(:last-child) {
	margin-bottom: 16px;
}

/* Reset the appearance of radios */
.settings-menu input[type=radio] {
	-moz-appearance: none;
	-webkit-appearance: none;
	position: absolute;
	visibility: hidden;
}

.settings-menu .theme-setting label {
	font-size: 0.9375rem;
	font-weight: 450;
	cursor: pointer;
}

/* Create our custom radio element */
.settings-menu .theme-setting label::before {
	display: block;
	width: 40px;
	height: 40px;
	background:#ffffff;
	border-radius: 50%;
	content: "";
	box-shadow: 0 0 0 transparent;
	margin: 0 auto 4px auto;
	transition: box-shadow 0.25s ease-in-out;
}

/* Add the SVGs for the icons */
.settings-menu .theme-setting label[for=lt]::before {
	content: url('../assets/light-setting.svg');
	background: var(--light-base);
}

.settings-menu .theme-setting label[for=dt]::before {
	content: url('../assets/dark-setting.svg');
	background: var(--dark-base);
}

.settings-menu .theme-setting label[for=at]::before {
	content: url('../assets/auto-setting.svg');
	background: linear-gradient(to right , var(--light-base) 0%, var(--light-base) 50%, var(--dark-base) 50%, var(--dark-base)  100%)
}

/* Set label color when checked */
.settings-menu .theme-setting input[type=radio]:checked ~ label {
	color: var(--link);
}

/* Set border on radio when checked */ 
.settings-menu .theme-setting input[type=radio]:checked ~ label::before {
	box-shadow: 0 0 0 3px var(--link);
	border: transparent;
}

/* Dividers */

.relative {
	position: relative;
}

.vertical-ruler {
	width: 100%;
	height: 10px;
	border-radius: 1px;
	background: linear-gradient(to right, var(--ruler-start), var(	--ruler-end));
	box-shadow: var(--ruler-shadow);
	transition: box-shadow 0.5s ease-in-out
}

.vertical-ruler.blur {
	position: absolute;
	top: 2px;
	filter: blur(12px) brightness(1.5);
	opacity: 0.15;
	box-shadow: none;
	z-index: -1;
}

/* Media Queries */

@media (min-width: 1366px) {
	html {
		font-size: 115%;
	}
	main {
		max-width: 944px;
	}
	.vertical-ruler {
		height: 9px;
	}
}

@media (min-width: 1024px) {
	nav ul {
		flex-direction: row;
	}
	nav ul li {
		margin-top: 0;
	}
	nav ul li:not(:last-child) {
		margin-right: 2rem;
	}
}

@media (max-width: 767px) {
	main {
		max-width: calc(100vw - 96px);
		margin-top: 6rem;
	}
	.vertical-ruler {
		height: 7px;
	}
}

@media (max-width: 480px) {
	main {
		max-width: calc(100vw - 40px)
	}
}

  /* Animations */

.come-in {
	visibility: visible;
	animation: appear-fade-scale 1.7s var(--curve);
}


@keyframes appear-fade-scale {
	0% {
		opacity: 0;
		transform: scale(0.975);
	}
	100% {
		opacity:1;
		transform: scale(1);
	}
}


.menu-appear {
	transform-origin: top right;
	animation-name: menu-appear;
	animation-timing-function: var(--curve);
	animation-duration: .3s;
}

.menu-disappear {
	transform-origin: top right;
	animation-name: menu-disappear;
	animation-timing-function: var(--curve);
	animation-duration: .3s;

}


@keyframes menu-appear {
	0% {
		transform: scale(0.6);
		opacity: 0;
	}
	20% {
		opacity: 1;
	}
	60% {
		transform: scale(1.05);
	}
	100% {
		opacity: 1;
		transform: scale(1);
	}
}

@keyframes menu-disappear {
	0% {
		transform: scale(1);
	}
	60% {
		transform: scale(1.05);
		opacity: 1;
	}
	100% {
		opacity: 0;
		transform: scale(0.3);
	}
}



/* Document
 * ========================================================================== */

/**
 * 1. Add border box sizing in all browsers (opinionated).
 * 2. Backgrounds do not repeat by default (opinionated).
 */

*,
::before,
::after {
  box-sizing: border-box; /* 1 */
  background-repeat: no-repeat; /* 2 */
}

/**
 * 1. Add text decoration inheritance in all browsers (opinionated).
 * 2. Add vertical alignment inheritance in all browsers (opinionated).
 */

::before,
::after {
  text-decoration: inherit; /* 1 */
  vertical-align: inherit; /* 2 */
}
/* ... */

